fixed scroll bars, fitted image in view more modal, and aligned view more and add to cart button

--- a/client/src/components/Purchases/Purchases.css
+++ b/client/src/components/Purchases/Purchases.css
@@ -13,7 +13,7 @@
 .historyContainer{
     gap: 20px;
     padding: 20px 20px 0 20px;
-    height: 71vh;
+    height: 70.7vh;
     overflow-y: scroll;
 }
 
